public/style.css
/* ... */
.modalContainer {
  background-color: #fff;
  padding: 20px;
  max-width: 500px;
  height: auto  ;
  width: 90%;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 15px;
}

.modalTitle {
  text-align: center;
}

.modalTitle h1{
  font-size: 30px;
  font-weight: bold;
  width: 100%;
  text-align: center;
}

.modalBody {
  text-align: center;
  font-family: "Montserrat";
  font-weight: 400
}

.modalFooter {
  text-align: center;
  margin-top: 20px;
}

.modalFooter button{
  margin: 10px;
}

